# MarkerDetectionPrototype

./: .gitignore  CMakeCache.txt  CMakeLists.txt  DisplayImage.cbp  Makefile  Marble_Cpp  calibrate_camera_charuco.cpp  cmake_install.cmake  main.cpp
calibrations/: cal1  cal2
