cmake_minimum_required(VERSION 3.16)
project(Marble_Cpp)

set(CMAKE_CXX_STANDARD 20)
cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable(Marble_Cpp main.cpp calibrate_camera_charuco.cpp)
target_link_libraries( Marble_Cpp ${OpenCV_LIBS} )
